--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-"short_name": "NCAAB Predictor",
-"name": "NCAAB Predictor",
+"short_name": "Score Genie",
+"name": "Score Genie",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
